string problem find first non repeating / repeating character